# ArcOn-r2

./: .bashrc_local  ArcOn_install  For_Tess  LICENSE  README  Uninstall_ArcOn  VERSION
ArcOn/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ArcOn/include/: #Calculate_Poisson_Continuous.h#  #Load_initial_conditions.h#  Assemble_cont_stiffness.h  Assemble_sigma.h  Assemble_stiffness.h  Assemble_stiffness.h~  Assemble_system.h  Assemble_system.h~  Boundary_conditions.h  Calculate_MassAction.h  Calculate_Poisson.h  Calculate_Poisson.h~  Calculate_Poisson_Continuous.h  Calculate_Poisson_Continuous.h~  Calculate_div_flux.h  Calculate_div_flux.h~  Calculate_div_flux_older.h  Component_parser.h  Compute_cm.h  Compute_l2_error.h  Compute_l2_interpolation.h  Create_DG_periodicity.h  Create_mesh.h  Equation_of_state.h  Generic_functions.h  Initial_Conditions.h  Load_initial_conditions.h  Load_initial_conditions.h~  Load_top.h  MassAction.h  MassActionI.h  MassMatrix.h  MatrixMapper.h  Modon.h~  Newton_root.h  Newton_root.h~  Output_results.h  Periodicity_map.h  Physical_parameters.h  RK_MassAction_integrator.h  (+19 more)
ArcOn/include/Dmitry_files/: SOLblobXZ.cxx  Ullmann_Map.h  modon.cpp~
ArcOn/include/Dmitry_files/Ullman_unused/: Ullman_backward_map.h  Ullman_local_backward_map.h
ArcOn/include/test/step-01/: CMakeCache.txt  CMakeLists.txt  Makefile  step-01.cc~
ArcOn/include/test/step-02/: Makefile  output  step-01.cc~  step-02.cc
ArcOn/input/: #ICond2.txt#  ICond2.txt  ICond2.txt_Ahmet_case  ICond2.txt_turb  ICond2.txt~  ICond3.txt  Parameters.txt  Parameters.txt_old  Parameters.txt~  Ullman_mesh.ucd  square.inp
ArcOn/input/mesh_tools/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  grid-1.eps  grid2  grid2.cc_old  grid2_old.cc  grid3.cc  grid9.cc  present_grid.cc
ArcOn/lib/2d/: ArcOn  dat0  dat1  dat1.info  dat2  out  script
ArcOn/source/: Main.cc
ArcOn_Euler/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
scripts/: arcon_view2.py  pvpython_filter.py
(+63 files in other folders)
